[package]
name = "cargo-roogle"
version = "0.1.0"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
edition = "2021"
description = "A Cargo subcommand to run Roogle on local crates"
readme = "README.md"
repository = "https://github.com/roogle-rs/cargo-roogle"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.14"
structopt = "0.3"
tempfile = "3.2"
